--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Smells Like Bakin' Cupcake Company</title>
+	<link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-	<link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
 	<link href='http://fonts.googleapis.com/css?family=Nunito:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 
@@ -13,64 +13,64 @@
 	
 	<div class="container clearfix">
 		<div class="grid_4">
-			<img src="img/logo.gif" alt="Smells Like Bakin'">
+			<img src="img/field.jpg" alt="Spring Peeper">
 		</div>
 		<div class="grid_8 omega">
 			<ul class="nav">
 				<li><a href="#">About</a></li>
-				<li><a href="#">Cupcakes & Prices</a></li>
-				<li><a href="#">Locations</a></li>
-				<li class="last"><a href="#">Contact Us</a></li>
+				<li><a href="#">Current Learning Topics</a></li>
+				<li><a href="#">Future Learning Topics</a></li>
+				<li class="last"><a href="#">Contact Me</a></li>
 			</ul>
 		</div>
 		
 		<div id="intro" class="grid_9">
-			<h1>Opposites really do attract, especially in our kitchen! We combine unexpected flavors that melt together to create ironically delicious desserts. </h1>
-			<p><a href="#" class="btn">Browse Our Cupcakes</a></p>
+			<h1>Please suggest any books, tutorials, videos, or other media a beginning programmer should be exposed to through the contact me link!. </h1>
+			<p><a href="#" class="btn">Browse Our Topics</a></p>
 		</div>
 		<div class="grid_3">
-			<img src="img/you-bake-me-blush.gif" alt="You Bake Me Blush">
+			<img src="img/PurpleMartin_web.png" alt="Spring Peeper">
 		</div>
 		
 	
 		<div id="featured-cupcake" class="grid_7">
-			<h2>Cupcake of the Week</h2>
-			<p>This week’s featured cupcake is the <a href="#">Avocado Chocolate cupcake</a>. It’s strange combo of flavors will kick your taste buds into fiesta mode!</p>
-			<img src="img/featured-cupcake.jpg" alt="Avocado Chocolate Cupcake">
+			<h2>Topic of the Week</h2>
+			<p>This week’s topics are <a href="#">HTML and CSS</a></p>
+			<img src="img/field2.jpg" alt="Pic 1">
 		</div>
 		
 		<div id="new-cupcakes" class="grid_5 omega">
-				<h2>Fresh Out the Oven</h2>
-				<p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeño So Spicy</a>. </p>
-			<img src="img/new-cupcake-bacon.jpg" alt="Bacon Me Crazy">
-			<img src="img/new-cupcake-jalapeno.jpg" alt="Spicy Lime">
+				<h2>Fresh Out the Browser</h2>
+				<p>Our newest topics are <a href="#">Javascript</a> and <a href="#">jQuery</a>. </p>
+			<img src="img/field3.jpg" alt="pic3">
+			<img src="img/field4.jpg" alt="pic4">
 		</div>
 		
 		
 		
 			
 			<div class="grid_7">
-				<h2>Inside the Kitchen</h2>
-				<p>Smells Like Bakin’ started out in the garage of the husband wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
+				<h2>Inside the Programmer</h2>
+				<p>This website started because programming might be aweseome!  Does anything else need to be said besides that! Maybe?! </p>
 				<p><a href="#" class="btn-small">Read More</a></p>
 			</div>
 			
 			
 		<div class="grid_5 omega">
-			<h2>Get Bakin’ with Us</h2>
+			<h2>Get Codin' with Us</h2>
 			
 			<div id="contact">
-				<p>Call us: <span>1-800-CUP-CAKE</span><br>
-				Email us: <a href="#">bakeon@smellslikebakin.com</a></p>
+				<p>Call us: <span>1-800-CSS-HTML</span><br>
+				Email us: <a href="#">codin@chasevh.com</a></p>
 			</div>
 			
-			<p>We announce all of our new flavors first through Facebook &amp; Twitter, and even take requests!</p>		
+			<p>We announce all of our new projects first through Facebook &amp; Twitter, and even take requests!</p>		
 			<a href="http://www.facebook.com/SmellsLikeBakin"><img src="img/facebook.gif" alt="Facebook"></a>
 			<a href="https://twitter.com/#!/smellslikebakin"><img src="img/twitter.gif" alt="Twitter"></a>
 		</div>
 		
 		<div id="copyright" class="grid_12">
-			<p>© 2012 Smells Like Bakin' Cupcake Company. All Rights Reserved.</p>
+			<p>© 2014 Smells Like Codin' Software Company. All Rights Reserved.</p>
 		</div>
 		
 	</div>
